--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+:root {
+  --line-border-fill: #3498db;
+  --line-border-empty: #e0e0e0;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -11,12 +16,90 @@ body {
 }
 
 body {
+  background-color: #f6f7fb;
   height: 100vh;
   margin: 0;
   padding: 0;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   overflow: hidden;
+}
+
+.container {
+  text-align: center;
+}
+
+.progress-container {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  margin-bottom: 32px;
+  max-width: 100%;
+  width: 350px;
+}
+
+.progress-container::before {
+  content: '';
+  position: absolute;
+  background-color: var(--line-border-empty);
+  top: 50%;
+  left: 0;
+  height: 4px;
+  width: 100%;
+  transform: translate(0, -50%);
+  z-index: -1;
+  transition: width 300ms ease-in;
+}
+
+.progress {
+  position: absolute;
+  background-color: var(--line-border-fill);
+  top: 50%;
+  left: 0;
+  height: 4px;
+  width: 0%;
+  transform: translate(0, -50%);
+  z-index: -1;
+  transition: width 300ms ease-in;
+}
+
+.circle {
+  width: 32px;
+  height: 32px;
+  color: #999;
+  border-radius: 50%;
+  background-color: white;
+  display: grid;
+  place-content: center;
+  border: 3px solid var(--line-border-empty);
+  transition: border 300ms ease-in;
+}
+
+.circle.active {
+  border-color: var(--line-border-fill);
+}
+
+.btn {
+  border: unset;
+  background-color: var(--line-border-fill);
+  padding: 8px 16px;
+  color: white;
+  border-radius: 5px;
+  font-family: inherit;
+  margin: 5px;
+  font-size: 0.875rem;
+}
+
+.btn:active {
+  transform: scale(0.98);
+}
+
+.btn:focus {
+  outline: unset;
+}
+
+.btn:disabled {
+  background-color: var(--line-border-empty);
+  cursor: not-allowed;
 }
