--- a/styles.css
+++ b/styles.css
@@ -72,8 +72,71 @@ body {
   transform-origin: top left;
 }
 
+.container.show-nav .circle {
+  transform: rotate(-70deg);
+}
+
+.container.show-nav + nav li {
+  transform: translateX(0);
+  transition-delay: 300ms;
+}
+
+nav {
+  position: fixed;
+  bottom: 40px;
+  left: 0;
+  z-index: 100;
+}
+
+nav ul {
+  list-style: none;
+  padding-left: 30px;
+}
+
+nav ul li {
+  text-transform: uppercase;
+  color: white;
+  margin: 50px auto;
+  transform: translateX(-100%);
+  transition: transform 400ms ease-in;
+}
+
+nav ul li + li {
+  margin-left: 15px;
+  transform: translateX(-150%);
+}
+
+nav ul li + li + li {
+  margin-left: 30px;
+  transform: translateX(-200%);
+}
+
+nav ul li i {
+  font-size: 20px;
+  margin-right: 10px;
+}
+
+.content {
+  max-width: 80vw;
+  margin: 0 auto;
+}
+
+.content h1 {
+  margin: 0;
+}
+
+.content small {
+  color: #555;
+  font-style: italic;
+}
+
 .content img {
   max-width: 100%;
   display: block;
   margin: 0 auto;
+}
+
+.content p {
+  color: #333;
+  line-height: 1.5;
 }
