--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,51 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  background: linear-gradient(90deg, #7d5fff, #7158e2);
+}
+
+.container {
+  background-color: white;
+  height: 50px;
+  position: relative;
+}
+
+input {
+  border: unset;
+  background-color: white;
+  font-size: 1rem;
+  padding: 15px;
+  height: 50px;
+  width: 50px;
+  transition: width 300ms ease;
+}
+
+button {
+  background-color: white;
+  border: 0;
+  cursor: pointer;
+  font-size: 1.5rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 50px;
+  width: 50px;
+  transition: transform 300ms ease;
+}
+
+button:focus,
+input:focus {
+  border: unset;
+  outline: unset;
+}
+
+.container.active input {
+  width: 200px;
+}
+
+.container.active button {
+  transform: translateX(198px);
 }
