--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,34 @@ body {
 }
 
 body {
+  background-color: rgb(161, 100, 223);
   height: 100vh;
   margin: 0;
   padding: 0;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  text-align: center;
+}
+
+.btn {
+  background-color: rebeccapurple;
+  border-radius: 5px;
+  color: white;
+  margin: 1rem;
+  padding: 1.5rem 3rem;
+  font-size: 1.2rem;
+  border: unset;
+  font-family: inherit;
+  cursor: pointer;
+}
+
+.btn:focus {
+  outline: 0;
+}
+
+.btn:hover {
+  opacity: 0.9;
 }
