--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Muli&display=swap');
 
 * {
   box-sizing: border-box;
@@ -6,11 +6,12 @@
 
 html,
 body {
-  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+  font-family: 'Muli', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
+  background-color: #2b88f0;
   height: 100vh;
   margin: 0;
   padding: 0;
@@ -19,4 +20,42 @@ body {
   align-items: center;
   justify-content: center;
   overflow: hidden;
+}
+
+h3 {
+  color: white;
+  margin: 10px 0 20px;
+}
+
+.container {
+  width: 500px;
+  margin: 0 auto;
+}
+
+.textarea {
+  border: unset;
+  display: block;
+  width: 100%;
+  height: 100px;
+  font-family: inherit;
+  padding: 8px;
+  margin: 0 0 20px;
+}
+
+.textarea:focus {
+  outline: 0;
+}
+
+.tag {
+  background-color: #f0932b;
+  color: white;
+  border-radius: 50px;
+  padding: 10px 20px;
+  margin: 0 5px 10px 0;
+  font-size: 14px;
+  display: inline-block;
+}
+
+.tag.highlight {
+  background-color: #273c75;
 }
