--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Muli&display=swap');
 
 * {
   box-sizing: border-box;
@@ -6,17 +6,110 @@
 
 html,
 body {
-  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+  font-family: 'Muli', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
+  background-color: #eafbff;
+  background-image: linear-gradient(
+    to bottom,
+    #eafbff 0%,
+    #eafbff 50%,
+    #5290f9 50%,
+    #5290f9 100%
+  );
   height: 100vh;
   margin: 0;
   padding: 0;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   overflow: hidden;
+}
+
+nav {
+  background-color: white;
+  padding: 20px;
+  width: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 3px;
+  box-sizing: 0 2px 5px rgba(0, 0, 0, 0.3);
+  transition: width 600ms linear;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  width: 0;
+  transition: width 600ms linear;
+}
+
+nav ul li {
+  margin: 0 10px;
+  transform: rotate(0deg);
+  opacity: 0;
+  transition: transform 600ms linear, opacity 600ms linear;
+}
+
+nav ul li a {
+  position: relative;
+  text-decoration: none;
+  color: black;
+  font-family: inherit;
+}
+
+nav button {
+  border: 0;
+  background-color: transparent;
+  width: 30px;
+  height: 30px;
+  position: relative;
+  padding: 0;
+  cursor: pointer;
+}
+
+nav button div {
+  width: 20px;
+  height: 2px;
+  background-color: #5290f9;
+  position: absolute;
+  top: 10px;
+  left: 5px;
+  transition: transform 600ms linear;
+}
+
+nav button div:nth-of-type(2) {
+  top: auto;
+  bottom: 10px;
+}
+
+nav button:focus {
+  outline: 0;
+}
+
+nav.active {
+  width: 350px;
+}
+
+nav.active ul {
+  width: 100%;
+}
+
+nav.active ul li {
+  opacity: 1;
+  transform: rotateY(360deg);
+}
+
+nav.active button div:nth-of-type(1) {
+  transform: rotateZ(765deg) translateY(5.5px);
+}
+
+nav.active button div:nth-of-type(2) {
+  transform: rotateZ(-765deg) translateY(-5.5px);
 }
