--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
 }
 
 body {
+  background-color: black;
   height: 100vh;
   margin: 0;
   padding: 0;
@@ -19,4 +20,38 @@ body {
   align-items: center;
   justify-content: center;
   overflow: hidden;
+}
+
+button {
+  background-color: purple;
+  color: white;
+  border: 1px solid purple;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  position: relative;
+  border: 0;
+  padding: 20px 30px;
+  overflow: hidden;
+  margin: 10px 0;
+}
+
+button:focus {
+  outline: 0;
+}
+
+button .circle {
+  position: absolute;
+  background-color: white;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  animation: scale 500ms ease-out;
+}
+
+@keyframes scale {
+  to {
+    transform: translate(-50%, -50%) scale(3);
+    opacity: 0;
+  }
 }
