--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,78 @@ body {
 }
 
 body {
+  background-color: #2c3e50;
   height: 100vh;
   margin: 0;
   padding: 0;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   overflow: hidden;
+}
+
+.kinetic {
+  position: relative;
+  height: 80px;
+  width: 80px;
+}
+
+.kinetic::after,
+.kinetic::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 0;
+  border: 50px solid transparent;
+  border-bottom-color: white;
+}
+
+.kinetic::after {
+  transform: rotate(90deg);
+  animation: rotateA;
+  animation-timing-function: ease;
+  animation-duration: 2s;
+  animation-delay: 500ms;
+  animation-iteration-count: infinite;
+}
+
+.kinetic::before {
+  animation: rotateB;
+  animation-timing-function: ease;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes rotateA {
+  0%,
+  25% {
+    transform: rotate(0deg);
+  }
+
+  50%,
+  75% {
+    transform: rotate(180deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes rotateB {
+  0%,
+  25% {
+    transform: rotate(90deg);
+  }
+
+  50%,
+  75% {
+    transform: rotate(270deg);
+  }
+
+  100% {
+    transform: rotate(450deg);
+  }
 }
