--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
 }
 
 body {
+  background-color: darksalmon;
   height: 100vh;
   margin: 0;
   padding: 0;
@@ -19,4 +20,25 @@ body {
   align-items: center;
   justify-content: center;
   overflow: hidden;
+}
+
+div {
+  position: absolute;
+  bottom: 40px;
+  background-color: rgba(0, 0, 0, 0.1);
+  padding: 10px 20px;
+  font-size: 18px;
+}
+
+input {
+  width: 48%;
+  padding: 5px;
+  font-size: 18px;
+  background-color: darksalmon;
+  border: 0;
+  text-align: center;
+}
+
+input:focus {
+  outline: 0;
 }
